# Trabajofinal-Teoria-de-compiladores

./: CMakeLists.txt  README.md
Gramática/generados/: RecipesBaseListener.cpp  RecipesBaseListener.h  RecipesBaseVisitor.cpp  RecipesBaseVisitor.h  RecipesLexer.cpp  RecipesLexer.h  RecipesListener.cpp  RecipesListener.h  RecipesParser.cpp  RecipesParser.h  RecipesVisitor.cpp  RecipesVisitor.h
backend/: RecipeCodegenVisitor.cpp  RecipeCodegenVisitor.h  RecipeVisitorImpl.cpp  RecipeVisitorImpl.h  main.cpp
docs/: Informe-Trabajo-Final.md  PT_TDC_U202218729.docx
ignore/: AST.h  AstBuilderVisitor.cpp  AstBuilderVisitor.h  CodegenVisitor.cpp  CodegenVisitor.h  TreePrinter.h  main.cpp
tests/: brownie.recipe  sopa.recipe
